# clfutils4r

./: README.md  info.md  pyproject.toml  setup.py
src/clfutils4r/: eval_classification.py  gridsearch_classification.py  pretty_cm.py  pulsar_stars.csv
src/clfutils4r.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/example_classification/: info.md  main.ipynb  main.py
tests/example_classification/gridsearch_results/: best_model.joblib  best_model_info.json
tests/example_classification/gridsearch_results/models/DecisionTreeClassifier/: best_model__DecisionTreeClassifier.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_classification/gridsearch_results/models/ExtraTreeClassifier/: best_model__ExtraTreeClassifier.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_classification/gridsearch_results/models/ExtraTreesClassifier/: best_model__ExtraTreesClassifier.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_classification/gridsearch_results/models/GaussianNB/: best_model__GaussianNB.joblib  best_model_info.json  grid_search_results.csv  grid_search_results.json  parcoord_plot.html
tests/example_classification/ideal_results/: classification_report.csv
tests/example_classification/results/: classification_report.csv
tests/example_classification/test_results/: classification_report.csv
(+15 files in other folders)
